# ithraa

./: .coverage.Minerva.local.31529.XxrSalBx  .gitignore  README.md  TODO.md  compare_all_genes.py  compare_matching.py  install.py  plot_results.py  pyproject.toml  run_example.py
.prompts/: main.prompt.md
example/: config.toml  temp_config.toml
example/data/: ensembl_HGNC_file.txt  gene_coords_ensembl_v69.txt  gene_ranks_ESN_only.txt  gene_ranks_ihs-1000kb_1kgp_afr.txt  valid_genes.txt
example/vips/: temp_inter_coronaviruses_may2020  temp_inter_denv_april2020  temp_inter_ebv_march2017  temp_inter_hbv_march2017  temp_inter_hcv_may2020  temp_inter_hsv_march2017  temp_inter_kshv_may2020  temp_inter_sv40_march2017  temp_inter_vacv_march2020  temp_inter_wnv_may2020
examples/: config.toml
examples/data/: factors.txt
examples/vips/: temp_inter_adv_march2017  temp_inter_chikv_march2017  temp_inter_ebov_april2020  temp_inter_ev71_march2017  temp_inter_hcmv_march2017  temp_inter_hiv_march2017  temp_inter_hpv_may2020  temp_inter_htlv_march2017  temp_inter_influenza_march2017  temp_inter_rsv_march2017  temp_inter_supercomplete_may2020  temp_inter_zika_april2020
src/gse_pipeline/: __init__.py  cli.py  config.py  data.py  pipeline.py  stats.py  utils.py
src/ithraa/: __init__.py  cli.py  config.py  data.py  pipeline.py  stats.py  utils.py  visualise.py
tests/: __init__.py  test_config.py  test_configuration.py  test_data.py  test_pipeline.py  test_stats.py  test_utils.py  test_visualise.py
