[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ithraa"
version = "0.0.1"
description = "Gene Set Enrichment Pipeline"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Yassine Souilmi", email = "yassine.souilmi@adelaide.edu.au"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numba>=0.57.0",
    "polars>=0.20.0",
    "scipy>=1.10.0",
    "tomli>=2.0.0",
    "tomli_w>=1.0.0",
    "statsmodels>=0.13.0",
    "tqdm>=4.62.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy",
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Documentation = "https://gse-pipeline.readthedocs.io/"
# Repository = "https://github.com/yourusername/ithraa.git"
# Issues = "https://github.com/yourusername/ithraa/issues"

[project.scripts]
ithraa = "ithraa.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ithraa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=ithraa --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true